--- a/src/app/portal/savings/savings/savings.component.html
+++ b/src/app/portal/savings/savings/savings.component.html
@@ -8,6 +8,10 @@
 <app-photos-modal
     #appPhotoModal>
 </app-photos-modal>
+<!-- Modal informando que há leituras falhadas-->
+<app-failed-reading-modal
+    #failedReadingdsModal>
+</app-failed-reading-modal>
 <!-- Modal informando que há leituras pendentes-->
 <app-pending-readings-modal
     #pendingReadingsModal
